--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>makesweird.art</title>
-    <link rel="stylesheet" href="../src/style.css" />
+    <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
     <!-- made with love by eninabox.art-->
@@ -26,6 +26,6 @@
       ><a href="/chat">chat</a><a href="/updates">updates</a
       ><a href="/about">about</a>
     </nav>
-    <script src="../src/app.js"></script>
+    <script src="/src/app.js"></script>
   </body>
 </html>
