more leaderboard sorting improvements + slightly better responsiveness on mobile devices.

--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -203,7 +203,7 @@
             "</span>" +
             u.name +
             " has been making " +
-            trunc(u.thing) +
+            u.thing +
             " for " +
             u.streak +
             " " +
@@ -219,7 +219,7 @@
               "</span>" +
               data.you.name +
               " has been making " +
-              trunc(data.you.thing) +
+              data.you.thing +
               " for " +
               data.you.streak +
               " " +
