--- a/public/about.html
+++ b/public/about.html
@@ -3,36 +3,41 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>about + makesweird.art</title>
+    <title>what is mwa?</title>
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
     <main class="pg-about">
-      <p><a href="/">makesweird.art</a></p>
-      <p>this is a reminder to make <span id="thing">weird art</span>!</p>
+      <p><a href="/">makesweird.art</a> is a reminder to make <span id="thing">weird art</span>!</p>
       <p>
-        it doesn't have to be good. it doesn't have to make sense. it doesn't
-        even have to be finished, it just has to exist.
+        it doesn't have to be good, it doesn't have to make sense, it doesn't
+        even have to be finished. it just has to exist. this site exists to celebrate daily rituals and art. it's a place to show up for yourself, and be part of a community doing the same.
       </p>
       <p>
         your streak counts how many days in a row you've shown up. miss two and
-        it resets.
+        it resets. it's easy to continue your streak by changing the thing you make to something you can do every day, like doodling, or making a sandwich, or taking a photo. whatever you want to make.
+        you can sync your streak across devices with your secret key, found on the leaderboard page.
       </p>
-      <p>
-        one secret key. no email. no password. we store your streak, username,
-        and nothing else.
-      </p>
-      <p>this site is made by hand, and tries to stay under ~10kb.</p>
+      <p>this site is made by hand, and comes in at ~10.6kb.</p>
       <p>
         it's also
         <a href="https://github.com/parka6060/makesweird.art">open source</a>.
       </p>
       <p>now go make something.</p>
+      <details>
+        <summary class="sub">changelog</summary>
+        <p class="v">v1.2026.february</p>
+        <p>initial release. added <a href="/chat">live chat</a>,
+          streaks, leaderboard.</p>
+        <p>for my partner, strangers, artists, weirdos, @mlgpenguin31,
+          @soybeat, @the_egg_god, @ubillity & @0liboo_</p>
+      </details>
+      <p class="sub">made with love by
+        <a href="https://eninabox.art" target="_blank" style="color: inherit">eninabox.art</a></p>
     </main>
     <nav id="nav">
       <a href="/">home</a><a href="/leaderboard">leaderboard</a
-      ><a href="/chat">chat</a><a href="/updates">updates</a
-      ><a href="/about">about</a>
+      ><a href="/chat">chat</a><a href="/about">about</a>
     </nav>
     <script>
       const t = localStorage.getItem("t");
