--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,7 @@
     </main>
     <nav id="nav">
       <a href="/">home</a><a href="/leaderboard">leaderboard</a
-      ><a href="/chat">chat</a><a href="/updates">updates</a
-      ><a href="/about">about</a>
+      ><a href="/chat">chat</a><a href="/about">about</a>
     </nav>
     <script src="/src/app.js"></script>
   </body>
